# aula_12_bootcamp_python1

./: README.md  dados_aleatorios.csv  leitor_csv_com_classe.py  leitor_csv_sem_classe.py  pyproject.toml
